# BOTG-TEMPLATE

./: CMakeLists.txt  PackagesList.cmake  ProjectName.cmake  README.md  README.rst  TPLsList.cmake
src/: CMakeLists.txt
src/TMPL/: Demo.cc  Demo.hh
src/TMPL/Fortran/: c_linkage.cc  c_linkage.h
src/TMPL/Fortran/test/: CMakeLists.txt  tstDemo.f90
src/TMPL/f/: Demo_M.f90
src/TMPL/f/test/: CMakeLists.txt  tstDemo.f90
src/TMPL/test/: CMakeLists.txt  tstDemo.cc
src/cmake/: Dependencies.cmake
